Fixed Scrollbar CSS

--- a/css/style.css
+++ b/css/style.css
@@ -249,11 +249,9 @@ a{
 a:visited, a:active, a:hover{color:#fff}
 /*Scrollbar
 ------------------*/
-::-webkit-scrollbar{width:12px;height:12px;background-color:#121212}
-::-webkit-scrollbar-corner{background-color:#0e0e0e}
-::-webkit-scrollbar-track{background-color:#121212}
+::-webkit-scrollbar{width:12px;height:12px;background:#121212}
 ::-webkit-scrollbar-thumb{background:#900}
-::-webkit-scrollbar:horizontal{height:12px}
+::-webkit-scrollbar-corner{background:#1a1a1a}
 /*Selection
 ------------------*/
 ::selection{color:#fff;background-color:#900}
